--- a/index.html
+++ b/index.html
@@ -241,27 +241,27 @@
                     <a href="#" class="lista-rodapé__link">Hipster ponto Tech</a>
                 </li>
                 <li class="lista-rodapé__item">
-                    <img src="/img/ScubaDev.svg" alt="logo da scuba dev">
+                    <img src="img/ScubaDev.svg" alt="logo da scuba dev">
                     <a href="#" class="lista-rodapé__link">Scuba Dev</a>
                 </li>
                 <li class="lista-rodapé__item">
-                    <img src="/img/LayersTech.svg" alt="logo layers ponto tech">
+                    <img src="img/LayersTech.svg" alt="logo layers ponto tech">
                     <a href="#" class="lista-rodapé__link">Layers ponto Tech</a>
                 </li>
                 <li class="lista-rodapé__item">
-                    <img src="/img/LikeABoss.svg" alt="logo like a boss">
+                    <img src="img/LikeABoss.svg" alt="logo like a boss">
                     <a href="#" class="lista-rodapé__link">Like a Boss</a>
                 </li>
                 <li class="lista-rodapé__item">
-                    <img src="/img/CarreiraSemFronteira.svg" alt="logo carreira sem fronteira">
+                    <img src="img/CarreiraSemFronteira.svg" alt="logo carreira sem fronteira">
                     <a href="#" class="lista-rodapé__link">Carreira Sem Fronteira</a>
                 </li>
                 <li class="lista-rodapé__item">
-                    <img src="/img/HipstersJobs.svg" alt="logo hipsters ponto job">
+                    <img src="img/HipstersJobs.svg" alt="logo hipsters ponto job">
                     <a href="#" class="lista-rodapé__link">Hipsters ponto Job</a>
                 </li>
                 <li class="lista-rodapé__item">
-                    <img src="/img/GUJ.svg" alt="logo guj">
+                    <img src="img/GUJ.svg" alt="logo guj">
                     <a href="#" class="lista-rodapé__link">GUJ</a>
                 </li>
             </ul>
