--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
                         <img src="img/Angular.svg" alt="Livro sobre Angular da Alura Books" class="descrição__imagem">
                     </div>
                     <div class="card__botões">
-                        <ul class="botões">
-                            <li class="botões__item"><img src="img/Favoritos.svg" alt="Favoritar Livro"></li>
-                            <li class="botões__item"><img src="img/Compras.png" alt="Adicionar no carrinho de compras"></li>
+                        <ul class="lista__botões">
+                            <li class="lista__botões--item"><img src="img/Favoritos.svg" alt="Favoritar Livro"></li>
+                            <li class="lista__botões--item"><img src="img/Compras.png" alt="Adicionar no carrinho de compras"></li>
                         </ul>
                             <a href="#" class="botões__âncora">Saiba mais</a>
                     </div>
